# serverside-wasm-book-workthrough

./: .gitignore  cargo.toml  hello_world_wasi02.wasm
chapter02/: kvstore.wit
chapter02/hello_world/hello_world_guest/: hello_world_guest.wasm  hello_world_guest_component.wasm  wasi_snapshot_preview1.reactor.wasm
chapter02/hello_world/hello_world_guest/src/: lib.rs
chapter02/wasi_virt/: hello_world_guest.wasm
chapter03/: kvstore.wit
chapter03/hello_world_component/: greet.js  greet.wit
chapter03/hello_world_python_host/: main.py  requirements.txt
chapter03/smart_cms/smartcms_kvstore_guest/: guest.js  kvstore_guest.wit
chapter03/smart_cms/smartcms_kvstore_guest/transpile/: guest.d.ts  guest.js
chapter03/smart_cms/smartcms_ml_guest/: Cargo.toml
chapter03/smart_cms/smartcms_ml_guest/src/: bindings.rs  lib.rs
chapter03/smart_cms/smartcms_test_host/: Cargo.toml  smart_cms.wit  stories.txt
chapter03/smart_cms/smartcms_test_host/src/: main.rs
chapter04/hello_world_wasi/hello_world_wasi_guest/: greet.js  greet.wit
chapter04/hello_world_wasi/hello_world_wasi_host/: Cargo.toml
chapter04/wasi02/hello_world_wasi02/: Cargo.toml
chapter04/wasi02/wasi02_lib/: Cargo.toml
chapter04/wasi02/wasi02_lib/src/: bindings.rs
chapter05/wasi_nn_example/: Cargo.toml  run.sh
chapter05/wasi_nn_example/data/: wasi_nn_example.wasm
chapter05/wasi_nn_example/src/: bindings.rs  main.rs
chapter05/wasm_udf_example/: Cargo.toml
chapter05/wasm_udf_example/data/: create_wasm_udfs.sql  output.txt  wasm_udf_example.wasm
chapter05/wasm_udf_example/src/: lib.rs
(+2 files in other folders)
